# jinx

./: .dockerignore  .gitignore  Dockerfile  README.md  Vagrantfile  ansible.cfg  pyproject.toml
inventory/: hosts.yml  hosts_fake.yml
lftp/: Dockerfile.lftp  lftp.md
pipelines/: ansible-async.groovy  ansible.groovy  docker.groovy  git.groovy  lftp.groovy  parallel.groovy  private_key.groovy  quickstart.groovy
playbooks/: 00_corp_mitm_certs.yml  00_venv.yml  async.yml  block_loop.yml  block_tags.yml  combine.yml  command.yml  debugger.yml  double_interpolate.yml  fact_overwrite.yml  filter_by_attribute.yml  jinja_zip.yml  lftp.yml  loop.yml  never.yml  tempfile.yml  test_set_variable.yml  user_json_file  write_variable.yml  write_variable_local.yml  write_variable_remote.yml
playbooks/files/: debug.yml
roles/hellorole/tasks/: cheese.yml
