[tool.poetry]
name = "jinx"
version = "0.1.0"
description = ""
authors = ["Anthony Villena <hiddenwaffle@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^2.10.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
